[gd_scene load_steps=3 format=3 uid="uid://c63ewp0wfu3g5"]

[ext_resource type="Script" uid="uid://vx83kyg6nr3t" path="res://confirmation_popup.gd" id="1_wu7md"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wu7md"]
bg_color = Color(0, 0, 0, 1)

[node name="ConfirmationPopup" type="PopupPanel"]
size = Vector2i(708, 500)
visible = true
theme_override_styles/panel = SubResource("StyleBoxFlat_wu7md")
script = ExtResource("1_wu7md")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 708.0
offset_bottom = 500.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="LegalText" type="RichTextLabel" parent="VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(700, 450)
layout_mode = 2
bbcode_enabled = true
fit_content = true
autowrap_mode = 2
text_direction = 1

[node name="AcceptButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
disabled = true
text = "Accept"

[connection signal="pressed" from="VBoxContainer/AcceptButton" to="." method="_on_accept_button_pressed"]
